<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/search_controls"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/toolbar_info"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical">

        <TextView
            android:id="@+id/toolbar_ranges_count"
            style="@style/ToolbarTextInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal" android:text="@string/label_ranges"/>

        <TextView
            android:id="@+id/toolbar_operators_count"
            style="@style/ToolbarTextInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal" android:text="@string/label_operators"/>

        <TextView
            android:id="@+id/toolbar_regions_count"
            style="@style/ToolbarTextInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal" android:text="@string/label_regions"/>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <LinearLayout
        android:id="@+id/toolbar_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/button_phone"/>

        <Button
            android:id="@+id/button_region"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_region"/>

        <Button
            android:id="@+id/button_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:text="@string/button_operator"/>

    </LinearLayout>

    <ListView
        android:id="@+id/search_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:drawSelectorOnTop="false" />

    <ProgressBar
        android:id="@+id/search_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateBehavior="cycle"
        android:visibility="gone"
        android:indeterminateOnly="true" />

</LinearLayout>